; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p_group.c_p2p_group_get_client_iface.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p_group.c_p2p_group_get_client_iface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p2p_group_member = type { i32, %struct.p2p_group_member* }
%struct.p2p_group = type { %struct.p2p_group_member* }

@ETH_ALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.p2p_group_member* (%struct.p2p_group*, i32*)* @p2p_group_get_client_iface to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.p2p_group_member* @p2p_group_get_client_iface(%struct.p2p_group* %0, i32* %1) #0 {
  %3 = alloca %struct.p2p_group_member*, align 8
  %4 = alloca %struct.p2p_group*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.p2p_group_member*, align 8
  store %struct.p2p_group* %0, %struct.p2p_group** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.p2p_group*, %struct.p2p_group** %4, align 8
  %8 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %7, i32 0, i32 0
  %9 = load %struct.p2p_group_member*, %struct.p2p_group_member** %8, align 8
  store %struct.p2p_group_member* %9, %struct.p2p_group_member** %6, align 8
  br label %10

10:                                               ; preds = %24, %2
  %11 = load %struct.p2p_group_member*, %struct.p2p_group_member** %6, align 8
  %12 = icmp ne %struct.p2p_group_member* %11, null
  br i1 %12, label %13, label %28

13:                                               ; preds = %10
  %14 = load i32*, i32** %5, align 8
  %15 = load %struct.p2p_group_member*, %struct.p2p_group_member** %6, align 8
  %16 = getelementptr inbounds %struct.p2p_group_member, %struct.p2p_group_member* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @ETH_ALEN, align 4
  %19 = call i64 @os_memcmp(i32* %14, i32 %17, i32 %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %13
  %22 = load %struct.p2p_group_member*, %struct.p2p_group_member** %6, align 8
  store %struct.p2p_group_member* %22, %struct.p2p_group_member** %3, align 8
  br label %29

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23
  %25 = load %struct.p2p_group_member*, %struct.p2p_group_member** %6, align 8
  %26 = getelementptr inbounds %struct.p2p_group_member, %struct.p2p_group_member* %25, i32 0, i32 1
  %27 = load %struct.p2p_group_member*, %struct.p2p_group_member** %26, align 8
  store %struct.p2p_group_member* %27, %struct.p2p_group_member** %6, align 8
  br label %10

28:                                               ; preds = %10
  store %struct.p2p_group_member* null, %struct.p2p_group_member** %3, align 8
  br label %29

29:                                               ; preds = %28, %21
  %30 = load %struct.p2p_group_member*, %struct.p2p_group_member** %3, align 8
  ret %struct.p2p_group_member* %30
}

declare dso_local i64 @os_memcmp(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
